FIX: troubleshoot layout issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -145,13 +145,13 @@ video {
   transform-origin: bottom right;
 }
 
-.main_content {
+main {
   display: flex;
   flex-direction: column;
   margin-top: 5vh;
-  height: 50vh;
   z-index: 10;
   padding-right: 20px;
+  border:1px solid red;
 }
 
 .main_pars {
@@ -189,27 +189,27 @@ video {
 
 /* social */
 .social-icons {
-  position: absolute;
   margin-bottom: 2rem;
   right: 3.5rem;
   bottom: 3rem;
   width: auto;
-  z-index: 2;
+  display: flex;
+  border:1px solid red;
+  margin: 5rem;
 }
 
 .list {
   margin-top: 2rem;
   width: 100%;
   text-align: center;
-  display: flex;
-  justify-content: space-around;
   min-width: 22rem;
+  display: flex;
 }
 
 .list-item {
   margin-left: 1rem;
   margin-right: 1rem;
-  display: inline-block;
+
 }
 
 .list-item > a {
